assets/css/common.scss
body {
  color: $font3;
  font-size: 16px;
}
h1 {
  font-size: 1.4em !important;
}
h2 {
  font-size: 1.2em !important;
}
.no-scroll {
  position: fixed;
  width: 100%;
  overflow: hidden;
}
main {
  overflow: hidden;
  min-height: calc(100vh - 390px);
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  gap: 54px;
  max-width: 1200px;
  //padding: 0 20px;
}
.layout-left {
  flex: 1;
}
.content-box {
  flex: 1;
}
.layout-right,
.aside-box {
  width: 329px;
  flex-shrink: 0;
}
$class-names: ("block", "flex", "grid");
@each $class-name in $class-names {
  .pc-hidden-#{$class-name} {
    display: none !important;
  }
  .m-hidden-#{$class-name} {
    display: #{$class-name} !important;
  }
}
.page {
  position: relative;
  max-width: 1200px;
  margin: 0 auto;
  box-sizing: content-box;
}
.pc-hidden {
  display: none;
}
.title-h2 {
  position: relative;
  font-family: "hem";
  font-size: 20px;
  line-height: 30px;
  margin-top: 32px;
  margin-bottom: 24px;
  padding-left: 13px;
  &::before {
    content: "";
    display: block;
    width: 5px;
    height: 100%;
    background-color: $color1;
    position: absolute;
    left: 0;
    top: 0;
  }
}
.title-new-tag {
  position: relative;
  font-family: Helvetica Neue, Helvetica Neue;
  font-size: 24px;
  line-height: 52px;
  margin-top: 40px;
  margin-bottom: 16px;
  padding-left: 64px;
  &::before {
    content: "";
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    @include icon(52px, 52px, "icon-new-tag.png");
  }
}
.title-h3 {
  font-family: "hem";
  font-size: 16px;
  line-height: 22px;
  margin-top: 32px;
  margin-bottom: 24px;
  color: $font1;
}
.slide-enter-active,
.slide-leave-active {
  transition: all 0.6s ease;
}

.slide-enter {
  opacity: 0;
  transform: translateY(-100%);
}

.slide-leave-to {
  transform: translateY(-100%);
  opacity: 0;
}
.opacity-enter-active,
.opacity-leave-active {
  transition: all 0.6s ease;
}

.opacity-enter {
  opacity: 0;
}

.opacity-leave-to {
  opacity: 0;
}
.news-detail {
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 2em;
  //color: rgba(23, 23, 23, 0.8) !important;
  * {
    font-family: "Noto Sans JP", "Lucida Grande", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
  }
  img {
    width: 100% !important;
    height: auto !important;
    margin: 1em auto;
  }
  //br {
  //  height: 0 !important;
  //}
  //p {
  //  //text-indent: 1em;
  //  min-height: 1em;
  //  margin-bottom: 4px;
  //}
  //strong {
  //  font-family: "hem" !important;
  //  font-weight: bold;
  //}
  #fafeedRelatedsearches {
    margin-top: 1em;
  }
  h1,
  h2,
  h3,
  h4 {
    font-size: 1.02em;
    margin: 1em 0;
    font-weight: bold;
  }
  .title {
    margin-bottom: 0;
  }
  .google-ad {
    margin-bottom: 4px;
  }
}
@media screen and (max-width: 1100px) {
  .layout-right {
    display: none !important;
  }
  main {
    //width: 710px;
    flex-direction: column;
    margin: 0 auto;
  }
  .aside-box {
    width: 100%;
  }
}
@media screen and (max-width: 750px) {
  main {
    width: 100%;
    overflow: unset;
    min-height: calc(100vh - vw(700));
    padding: 0 vw(32);
  }
  $class-names: ("block", "flex", "grid");
  @each $class-name in $class-names {
    .pc-hidden-#{$class-name} {
      display: #{$class-name} !important;
    }
    .m-hidden-#{$class-name} {
      display: none !important;
    }
  }
  .news-detail {
    //font-family: "se3" !important;
    //font-size: vw(30) !important;
    //line-height: vw(48) !important;
    //margin-bottom: vw(48);
    p {
      //font-family: "se3" !important;
      margin-bottom: vw(10);
    }
    .google-ad {
      margin-bottom: vw(10);
    }
  }
  .btn-tag {
    padding: vw(12) vw(16) !important;
    font-size: vw(24) !important;
    line-height: 1.5 !important;
  }
  main {
    .layout-left {
      .news-author {
        display: flex;
        margin-top: vw(8);
        justify-content: space-between;
        font-size: vw(26);
        font-weight: 300;
        line-height: vw(26);
        padding-bottom: vw(24);
        font-family: "Noto Sans SC", "Noto Sans JP", "Lucida Grande", "Hiragino Kaku Gothic ProN",
          Meiryo, sans-serif;
        @include author-icon(vw(28), vw(26));
      }
      .news-style-2 {
        .news-author {
          display: flex;
          margin-top: vw(8);
          justify-content: space-between;
          font-size: vw(26);
          line-height: vw(26);
          font-weight: 300;
          padding-bottom: vw(24);
          font-family: "Noto Sans JP", "Lucida Grande", "Hiragino Kaku Gothic ProN", Meiryo,
            sans-serif;
          @include author-icon(vw(26), vw(26));
        }
      }
    }
  }
  body {
    font-size: vw(28);
    //font-family: "se3";
  }
  .page {
    max-width: 100vw;
    overflow: hidden;
  }
  .title-h2 {
    font-size: vw(32);
    line-height: vw(44);
    margin-top: vw(48);
    margin-bottom: vw(32);
    padding-left: vw(24);
    &::before {
      width: vw(8);
    }
  }
  .title-new-tag {
    font-size: vw(32);
    line-height: vw(60);
    margin-top: vw(28);
    margin-bottom: vw(20);
    padding-left: vw(76);
    &::before {
      @include icon(vw(60), vw(60), "icon-new-tag.png");
    }
  }
  .title-h3 {
    font-size: vw(32);
    line-height: vw(44);
    margin-top: vw(48);
    margin-bottom: vw(32);
    color: $font3;
  }
}

